--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Talha Emre Çalargün | Girişimci • Operasyon • Dijital Dönüşüm</title>
-  <meta name="description" content="Talha Emre Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları.">
-  <meta name="keywords" content="Talha Emre Çalargün, girişimci, otopark, Parkexpert, Goods Real Estate, Formula Bilişim, dijital dönüşüm, operasyon, Expert Grup">
+  <title>Talha Çalargün | Girişimci • Operasyon • Dijital Dönüşüm</title>
+  <meta name="description" content="Talha Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları.">
+  <meta name="keywords" content="Talha Çalargün, girişimci, otopark, Parkexpert, Goods Real Estate, Formula Bilişim, dijital dönüşüm, operasyon, Expert Grup">
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#0b0b0c" />
 
@@ -15,15 +15,15 @@
   <link rel="alternate" hreflang="tr-TR" href="https://talhacalargun.com/">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Talha Emre Çalargün" />
-  <meta property="og:description" content="Talha Emre Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları." />
+  <meta property="og:title" content="Talha Çalargün" />
+  <meta property="og:description" content="Talha Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://talhacalargun.com/assets/og-cover.jpg?v=1" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Talha Emre Çalargün — kişisel sayfa kapağı" />
+  <meta property="og:image:alt" content="Talha Çalargün — kişisel sayfa kapağı" />
   <meta property="og:url" content="https://talhacalargun.com/" />
-  <meta property="og:site_name" content="Talha Emre Çalargün" />
+  <meta property="og:site_name" content="Talha Çalargün" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
