--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
+  <!-- Hero görselini önceden getir (AVIF) -->
+  <link rel="preload"
+        as="image"
+        href="assets/profile.avif?v=2"
+        imagesrcset="assets/profile.avif?v=2 1x, assets/profile.avif?v=2 2x"
+        imagesizes="(max-width: 900px) 100vw, 600px">
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVBXW9G069"></script>
   <script>
@@ -71,6 +78,8 @@
     a{color:inherit;text-decoration:none}
     .wrap{max-width:1050px;margin:0 auto;padding:28px}
 
+    .visually-hidden{position:absolute !important; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0 0 0 0); white-space:nowrap; border:0;}
+
     /* Sticky + blur header */
     #site-header{
       position: sticky; top: 0; z-index: 50;
@@ -81,20 +90,14 @@
       display:flex; align-items:center; justify-content:space-between; gap:16px;
       margin-bottom:28px; padding:10px 0;
     }
-    #site-header.scrolled{
-      box-shadow: 0 6px 20px rgba(0,0,0,.18);
-      border-color: #2a2c32;
-    }
+    #site-header.scrolled{ box-shadow: 0 6px 20px rgba(0,0,0,.18); border-color:#2a2c32; }
 
     .brand{display:flex;align-items:center;gap:14px}
     .logo{width:44px;height:44px;border-radius:50%;background:linear-gradient(135deg,var(--gold),#f6e27a);display:grid;place-items:center;color:#111;font-weight:800;box-shadow:var(--shadow)}
     nav{display:flex;gap:6px}
     nav a{opacity:.9;padding:10px 14px;border-radius:12px;border:1px solid transparent;position:relative;overflow:hidden}
     nav a:hover{border-color:var(--border);opacity:1}
-    nav a::after{
-      content:""; position:absolute; left:10%; right:90%; bottom:6px; height:2px;
-      background:linear-gradient(90deg,var(--gold),#f2d766); transition:all .25s ease;
-    }
+    nav a::after{content:""; position:absolute; left:10%; right:90%; bottom:6px; height:2px; background:linear-gradient(90deg,var(--gold),#f2d766); transition:all .25s ease;}
     nav a:hover::after{ left:10%; right:10%; }
 
     #theme-toggle{ padding:10px 12px; font-size:14px; border-radius:12px; border:1px solid var(--border); background:#15161a; }
@@ -110,11 +113,7 @@
     .subtitle{color:var(--muted);font-size:clamp(14px,1.4vw,16px);margin:0 0 18px}
 
     .badges{display:flex;flex-wrap:wrap;gap:10px;margin:16px 0 22px}
-    .badge{
-      padding:8px 12px;border-radius:999px;font-size:13px;
-      background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.16);
-      color:var(--text); transition:transform .15s ease, background .15s ease, border-color .15s ease;
-    }
+    .badge{padding:8px 12px;border-radius:999px;font-size:13px;background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.16);color:var(--text);transition:transform .15s, background .15s, border-color .15s}
     .badge:hover{ transform:translateY(-1px); background:rgba(255,255,255,.12); border-color:rgba(255,255,255,.28); }
     .badge--gold{ background:linear-gradient(135deg,#d4af37,#f2d766); color:#111; border-color:transparent; }
 
@@ -124,10 +123,7 @@
     .btn.primary{background:linear-gradient(135deg,var(--gold),#f2d766);color:#111;font-weight:700}
 
     .avatar{display:grid;place-items:center}
-    .avatar .photo{
-      width:100%; aspect-ratio:1/1; border-radius:22px; border:1px solid var(--border);
-      object-fit:cover; box-shadow:var(--shadow);
-    }
+    .avatar .photo{width:100%; aspect-ratio:1/1; border-radius:22px; border:1px solid var(--border); object-fit:cover; box-shadow:var(--shadow);}
 
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:28px}
     .grid .card-inner{padding:20px}
@@ -136,11 +132,10 @@
     .list{margin:10px 0 0;padding:0 0 0 16px;color:#cfd0d6}
 
     .links{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:18px}
-    .link{display:flex;align-items:center;justify-content:space-between;padding:16px;border-radius:14px;border:1px solid var(--border);background:#0f1014;transition:transform .15s ease, box-shadow .15s ease, border-color .15s ease}
+    .link{display:flex;align-items:center;justify-content:space-between;padding:16px;border-radius:14px;border:1px solid var(--border);background:#0f1014;transition:transform .15s, box-shadow .15s, border-color .15s}
     .link span{color:#dcdce3}
     .link small{color:#a9a9b3}
 
-    /* Light güçlendirme (rozet + link kartları) */
     :root[data-theme="light"] .badge{ background:#f1f2f4; border-color:#d9dbe1; color:#1b1c1f; }
     :root[data-theme="light"] .badge:hover{ background:#e7e9ee; border-color:#cdd0d8; }
     :root[data-theme="light"] .link{ background:#ffffff; border-color:#d9dbe1; box-shadow:0 2px 8px rgba(0,0,0,.05); }
@@ -156,12 +151,10 @@
       .grid{grid-template-columns:1fr}
     }
 
-    /* Sistem ayarı light olanlar için başlangıç paleti */
     @media (prefers-color-scheme: light){
       :root{ --bg:#f7f7f8; --card:#ffffff; --text:#1b1c1f; --muted:#5d5f68; --border:#e7e7ec; }
     }
 
-    /* Mobile */
     @media (max-width:600px){
       .wrap{padding:20px}
       .card-inner{padding:18px}
@@ -174,7 +167,6 @@
       .links{grid-template-columns:1fr}
     }
 
-    /* Attribute teması – butonla kesin override */
     :root[data-theme="dark"]{ --bg:#0b0b0c; --card:#111214; --text:#e7e7ea; --muted:#a9a9b3; --border:#22232a; }
     :root[data-theme="light"]{ --bg:#f7f7f8; --card:#ffffff; --text:#1b1c1f; --muted:#5d5f68; --border:#e7e7ec; }
   </style>
@@ -231,12 +223,23 @@
           <a id="btn-whatsapp" class="btn" href="https://wa.me/905372939874" target="_blank" rel="noopener noreferrer">WhatsApp</a>
         </div>
       </div></div>
+
       <div class="avatar">
-        <img src="assets/profile.jpg"
-             alt="Talha Çalargün - Profil Fotoğrafı"
-             class="photo"
-             width="600" height="600"
-             loading="lazy" decoding="async" fetchpriority="low">
+        <!-- LCP görseli: AVIF > WebP > JPG fallback -->
+        <picture>
+          <source type="image/avif"
+                  srcset="assets/profile.avif?v=2 1x, assets/profile.avif?v=2 2x"
+                  sizes="(max-width: 900px) 100vw, 600px">
+          <source type="image/webp"
+                  srcset="assets/profile.webp?v=2 1x, assets/profile.webp?v=2 2x"
+                  sizes="(max-width: 900px) 100vw, 600px">
+          <img
+            src="assets/profile.jpg?v=2"
+            alt="Talha Çalargün - Profil Fotoğrafı"
+            class="photo"
+            width="600" height="600"
+            loading="eager" decoding="async" fetchpriority="high">
+        </picture>
       </div>
     </section>
 
@@ -265,7 +268,7 @@
     </section>
 
     <section id="isler" style="margin-top:22px" aria-labelledby="markalar-baslik">
-      <h2 id="markalar-baslik" class="visually-hidden" style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden">Markalar</h2>
+      <h2 id="markalar-baslik" class="visually-hidden">Markalar</h2>
       <div class="links">
         <a class="link" href="https://www.parkexpert.net" target="_blank" rel="noopener noreferrer">
           <span>Parkexpert</span>
@@ -309,9 +312,7 @@
       </div></article>
     </section>
 
-    <footer>
-      © <span id="yil"></span> TEC
-    </footer>
+    <footer>© <span id="yil"></span> TEC</footer>
   </div>
 
   <!-- Tema kontrolü (kalıcı + meta theme-color güncelleme) -->
