--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
   <meta name="theme-color" content="#0b0b0c" />
 
   <!-- Canonical, Hreflang -->
-  <link rel="canonical" href="https://talhacalargun.com/" />
+  <link rel="canonical" href="https://talhacalargun.com/">
   <link rel="alternate" hreflang="tr-TR" href="https://talhacalargun.com/">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Talha Çalargün" />
-  <meta property="og:description" content="Talha Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://talhacalargun.com/assets/og-cover.jpg?v=1" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Talha Çalargün — kişisel sayfa kapağı" />
-  <meta property="og:url" content="https://talhacalargun.com/" />
-  <meta property="og:site_name" content="Talha Çalargün" />
+  <meta property="og:title" content="Talha Çalargün">
+  <meta property="og:description" content="Talha Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://talhacalargun.com/assets/og-cover.jpg?v=1">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Talha Çalargün — kişisel sayfa kapağı">
+  <meta property="og:url" content="https://talhacalargun.com/">
+  <meta property="og:site_name" content="Talha Çalargün">
 
   <!-- Twitter Cards -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Talha Çalargün" />
-  <meta name="twitter:description" content="Talha Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları." />
-  <meta name="twitter:image" content="https://talhacalargun.com/assets/og-cover.jpg?v=1" />
-  <meta name="twitter:image:alt" content="Talha Çalargün — kişisel sayfa kapağı" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Talha Çalargün">
+  <meta name="twitter:description" content="Talha Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları.">
+  <meta name="twitter:image" content="https://talhacalargun.com/assets/og-cover.jpg?v=1">
+  <meta name="twitter:image:alt" content="Talha Çalargün — kişisel sayfa kapağı">
 
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!-- Hero görselini önceden getir (AVIF) -->
   <link rel="preload"
@@ -233,18 +233,15 @@
           <source type="image/webp"
                   srcset="assets/profile.webp?v=2 1x, assets/profile.webp?v=2 2x"
                   sizes="(max-width: 900px) 100vw, 600px">
-          <picture>
-  <source srcset="assets/profile.webp" type="image/webp">
-  <img
-    src="assets/profile.jpg"
-    alt="Talha Çalargün - Profil Fotoğrafı"
-    class="photo"
-    width="600" height="600"
-    loading="eager"
-    decoding="async"
-    fetchpriority="high"
-  >
-</picture>
+          <img
+            src="assets/profile.jpg"
+            alt="Talha Çalargün - Profil Fotoğrafı"
+            class="photo"
+            width="600" height="600"
+            loading="eager"
+            decoding="async"
+            fetchpriority="high">
+        </picture>
       </div>
     </section>
 
